# zipfs-rw

./: .gitignore  .gitmodules  LICENSE  README.md  default.nix  fetch-clang-format  flake.nix  libtree-c.nix  libtree.nix  meson.build  shell.nix  zipfs-stat.c
include/: macro_utils.h  meson.build  stringify.h
src/: meson.build  zipfs_rw.c  zipfs_rw.h
test/: meson.build  prepare_workdir.sh
test/libfuse_examples/: meson.build  no_op.c  zipfs.c
test/libtree_examples/: meson.build  no_op.c
test/libzip_examples/: meson.build  no_op.c  test-zip-cat-hello  zip_cat.c  zip_stat.c  zipfs-stat.c  zipfs_stat.c
test/samples/: gen-sample-hello  gen-sample-hello-leafonly  gen-sample-special  gen-sample-symlinks  meson.build  prepare_sample_common.sh
